reset view on add todo; push -> unshift; minor fix

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -13,6 +13,10 @@ input[type="text"] {
     outline: none;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 #app {
     display: flex;
     flex-flow: column;
@@ -60,4 +64,14 @@ input[type="text"] {
 
 input[type="button"] {
     padding: 4px;
+    border-radius: 8px;
+    border: 2px solid #d0d0d0;
+    background-color: #f0f0f0;
+}
+input[type="button"]:hover {
+    background-color: #d0d0d0;
+}
+input[type="button"]:active {
+    border-color: #a0a0a0;
+    background-color: #a0a0a0;
 }
